--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="click one">Click Me!</button>
-    <button class="click two">No, Click Me!</button>
+    <button class="black">Click Me!</button>
+    <button class="yellow">No, Click Me!</button>
   </body>
 </html>
